Fix Death Knights not showing in possible picks

--- a/app/scripts/src/less/ui/replay/card.less
+++ b/app/scripts/src/less/ui/replay/card.less
@@ -31,6 +31,12 @@
 		    left: -1%;
 		    bottom: -6%;
 		}
+
+		// Fix for death knights until we have a proper custom renderer
+		&.hero-card {
+			top: -7%;
+			left: -4%;
+		}
 	}
 
 	// &:last-child {
